--- a/xogo.com/style.css
+++ b/xogo.com/style.css
@@ -2,22 +2,38 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    background-color: #203e52;
+    background-color: #160604;
     vertical-align: top;
+    
 }
 
 .ad-list{
     display: flex;
     justify-content: right;
+    margin-bottom: 20px;
+    
     
 }
 .ad-list li {
     list-style-type: none;
+    
+    
 }
 .ad-list li a{
-    color: rgb(248, 251, 252);
+    color: rgb(252, 247, 247);
     padding: 10px 10px;
     text-decoration: none;
+    box-shadow: 2px 2px 2px;
+}
+
+.tus {
+    color:#5e3e39;
+    background-color: rgb(255, 255, 255);
+    border-radius: 30px;
+    padding: 5px 5px;
+    font-size: 20px;
+    box-shadow: 5px 5px 10px inset rgb(85, 84, 80);
+   
 }
 
 .nav-list {
@@ -35,16 +51,100 @@ justify-content: center;
     font-size: 15px;
     font-weight: bold;
     width:100px;
-    background-color: rgb(7, 168, 243);
+    background-color: rgb(54, 44, 10);
     border: none;
     border-radius: 20px;
     padding: 10px 10px;
     box-shadow: 2px 2px 10px rgb(255, 254, 254);
-    colo
+
 }
-.nav-list li a button:hover{
+.nav-list li a button:hover {
     
     cursor: pointer;
-    background-color: rgb(3, 76, 110);
+    background-color: rgb(240, 169, 48);
     border-bottom: 5px;
    }
+.form-1 {
+    display: flex;
+    justify-content: space-around;
+    border-color: white;
+    
+
+    
+}
+.form-0 {
+    display: grid;
+    justify-content: space-around;
+    border: white;
+    
+
+    
+}
+.form-1 input{
+    color: rgb(110, 38, 4);
+    margin: 10px 10px;
+    padding: 10px 10px;
+    border-radius: 20px;
+    background-color: white;
+    font-weight: bold;
+
+    
+}
+.form-1 h1,a {
+    color: rgb(252, 252, 252);
+    
+       
+}
+.form-2 {
+    display: grid;
+    height: 300px;
+    /*background-color: azure;*/
+    border: none;
+    border-radius: 10px;
+    padding: 10px 10px;
+}
+.form-3 {
+    display: grid;
+    padding: 10px 10px;
+    height: 300px;
+
+}
+.form-4 {
+    display: grid;
+    padding: 10px 10px;
+}
+.form-1 a input{
+   
+    color: rgb(252, 249, 247);
+    margin: 10px 10px;
+    padding: 10px 10px;
+    border-radius: 20px;
+    background-color: rgb(71, 4, 4);
+    box-shadow: 2px 2px 10px;
+    border: none;
+    width: 280px;
+}
+
+.form-1 a input:hover{
+   
+    cursor: pointer;
+    color: rgb(175, 72, 4);
+    background-color: rgb(32, 30, 30);
+    
+}
+.form-4-1 {
+    color: azure;
+    display: grid;
+    padding: 10px 10px;
+   
+}
+.form-4-2 {
+    color: azure;
+    display: grid;
+    padding: 10px 10px;
+}
+.form-4-3 {
+    color: azure;
+    display: grid;
+    padding: 10px 10px;
+}
