--- a/Own/style.css
+++ b/Own/style.css
@@ -3,31 +3,77 @@
   margin: 0;
   padding: 0;
 }
+body {
+  background-color: rgb(255, 255, 255);
+}
 .nav {
   background-color: blue;
-  justify-content: center;
+  box-shadow: 2px 2px 20px rgba(0, 0, 0, 0.5);
 }
 
 .nav ul {
   display: flex;
   margin: 10px;
   padding: 10px;
-  justify-content: center;
+  justify-content: space-around;
 }
 .nav ul li {
   padding: 10px;
   list-style-type: none;
-  justify-content: center;
 }
 .nav ul li a {
-  background-color: whitesmoke;
+  background-color: rgb(0, 60, 255);
   border-radius: 8px;
-  color: black;
+  color: rgb(255, 255, 255);
   padding: 10px;
   text-decoration: none;
+  box-shadow: 2px 2px 20px rgba(0, 0, 0, 0.5);
 }
 .nav ul li a:hover {
   transition: all 300ms ease-in-out;
   font-weight: bold;
-  color: rgb(22, 7, 7);
+  color: rgb(232, 231, 253);
+}
+.guud {
+  display: flex;
+}
+.kow {
+  display: flex;
+  background-color: rgb(255, 255, 255);
+  margin-top: 50px;
+  margin-left: 20px;
+  width: 1200px;
+  border-radius: 18px;
+  box-shadow: 2px 2px 20px rgba(0, 0, 0, 0.5);
+}
+img {
+  width: 350px;
+  height: 350px;
+  margin-left: 20px;
+  padding-right: 50px;
+}
+.qodobka h1 {
+  padding: 10px;
+
+  font-size: 25px;
+  color: brown;
+}
+.qodobka p {
+  padding: 10px;
+  font-weight: lighter;
+}
+.labo {
+  background-color: rgb(255, 255, 255);
+  margin-top: 50px;
+  margin-left: 30px;
+  width: 300px;
+  border-radius: 20px;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+}
+input {
+  margin: 20px;
+  border-radius: 18px;
+  padding: 10px 20px;
+  border-color: blue;
+  border-style: solid;
 }
