--- a/xognet/stye.css
+++ b/xognet/stye.css
@@ -2,8 +2,13 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    background-color: rgb(255, 255, 255);
+    
   }
+  
+ 
   body {
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(65, 47, 47);
+  }
+  .nav ul li a{
+  text-decoration: none;
   }
